--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <head>
     </head>
     <body>
-        Hello World
+        <h1>Hello world</h1>
+        <p id="demo"></p>
+        <p id="details"></p>
+       
     </body>
+    <script src="main.js"></script>
+
 </html>
