--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     </title>
     <head>
     </head>
+    <script defer src="main.js"></script>
     <body>
         <h1>Hello world</h1>
         <p id="demo"></p>
         <p id="details"></p>
-       
-    </body>
-    <script src="main.js"></script>
-
+        <p class="demo1"></p>
+     </body>
 </html>
