--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <html>
     <title>
-        JAVA SCRIPT
+        HELLO
     </title>
-    <head>
-    </head>
-    <script defer src="main.js"></script>
     <body>
-        <h1>Hello world</h1>
-        <p id="demo"></p>
-        <p id="details"></p>
-        <p class="demo1"></p>
-     </body>
+        <a href="varaible.html">Varaibles</a>
+        <a href="input.html">Inputs</a>
+    </body>
 </html>
