--- a/input.html
+++ b/input.html
@@ -69,15 +69,15 @@
                 </select></td>
                </tr>
                <tr>
-                <th class="text-white">Gender</th><td><input type="radio" name="gender" class="ms-2" id="demo4" />Male
-                    <input type="radio" name="gender" class="mb-2">Female</td>
+                <th class="text-white">Gender</th><td><input type="radio" name="g"  value="Male" class="ms-2" id="demo4" />Male
+                    <input type="radio" name="g" value="Female" class="mb-2">Female</td>
                </tr>
                <tr>
                 <th class="text-white">Language</th>
-                <td><input type="checkbox" name="language" class="ms-2" id="demo5">Telugu
-                <input type="checkbox" name="c">English
-                <input type="checkbox" name="c">Hindi
-                <input type="checkbox" name="c"class="mb-2">Karnataka</td>
+                <td><input type="checkbox" value="Telugu" class="ms-2" id="demo5">Telugu
+                <input type="checkbox" value="English">English
+                <input type="checkbox" value="Hindi">Hindi
+                <input type="checkbox" value="Karnataka"class="mb-2">Karnataka</td>
                </tr>
                <tr>
                 <th class="text-white">Mobile No</th>
