--- a/input.html
+++ b/input.html
@@ -11,7 +11,7 @@
             }
         </style>
     </head>
-    <body class="d-flex justify-content-center algin-item-center vh-100 bg-dark">
+    <body class="d-flex justify-content-center algin-item-center vh-100 ">
         <div class="card p-5 h-75 w-auto mt-5 border-primary rounded-4 shadow-lg bg">
             <table>
                <tr>
